--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: var(--primary-color);
-  color: white;
+  color: var(--text-color-white);
   cursor: pointer;
   transition: border-color 0.25s, background-color 0.25s;
 }
