--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@ body {
   min-height: 100vh;
 
   background-color: var(--background-color);
-  color: var(--text-color);
+  color: var(--text-color-black);
 }
 
 a {
@@ -19,7 +19,7 @@ a {
 }
 
 a:hover {
-  color: var(--primary--color-hover); 
+  color: var(--primary-color-hover); 
 }
 
 h1 {
@@ -41,7 +41,7 @@ button {
 }
 
 button:hover {
-  background-color: var(--primary--color-hover); 
+  background-color: var(--primary-color-hover); 
 }
 
 button:focus,
