--- a/src/features/Products/styles/products.module.css
+++ b/src/features/Products/styles/products.module.css
@@ -1,3 +1,4 @@
+/* features/Products/styles/product.module.css */ 
 /* 1. REJILLAS FLEXIBLES - Optimizado para diferentes resoluciones */
 .product-grid {
     display: grid;
